# libeasymcp2221

./: .clang-format  .gitignore  API-Reference.md  BUILD.md  CMakeLists.txt  LICENSE  README.md  libeasymcp2221.man.3  libeasymcp2221.pc.in
.github/workflows/: deb.yml
debian/: changelog  control  copyright  libeasymcp2221-1.install  libeasymcp2221-1.udev  libeasymcp2221-dev.install  libeasymcp2221.docs  libeasymcp2221.install  rules
debian/.github/workflows/: deb.yml
debian/udev.rules.d/: 99-mcp2221.rules
examples/: CMakeLists.txt  analog_demo.c  flash_info_save.c  gpio_basic.c  gpio_poll_events.c  scan_i2c.c  set_pin_functions.c  ssd1306_i2c.c  test_i2c.c
include/: constants.h  error_codes.h  exceptions.h  i2c_slave.h  mcp2221.h  mcp2221_analog.h  mcp2221_flash.h  mcp2221_flash_info.h  mcp2221_flash_settings.h  mcp2221_gpio.h  mcp2221_gpio_poll.h  mcp2221_internal.h  mcp2221_pin.h  mcp2221_sram.h  smbus.h
src/: constants.h  exceptions.c  exceptions.h  i2c_slave.c  mcp2221.c  mcp2221_analog.c  mcp2221_flash.c  mcp2221_flash_info.c  mcp2221_flash_settings.c  mcp2221_gpio.c  mcp2221_gpio_poll.c  mcp2221_libusb.c  mcp2221_pin.c  mcp2221_sram.c  smbus.c
